# Agent-Skills-Retriever

./: .gitignore  CLAUDE.md  Makefile  README.md  batch_jobs.py  dev.ipynb  online_error_jobs.py  openai_batch_jobs.py  pyproject.toml
ast_skills/common/: api.py  datamodels.py  huggingface_uploader.py
ast_skills/data_gen/: batch_jobs.py  datamodels.py  dataset.py  online_error_jobs.py  retriever_batch_join.py  retriever_eval.py  retriever_training_dataset.py  skills_data_collect.py  synthetic_data_gen.py
ast_skills/evaluation/: evaluate_retriever.py  run_validation_model_sweep.py
ast_skills/persona_data_gen/: __init__.py  build_datagen.py  datamodels.py  persona_prompts.py  prompt_jobs.py  query_prompts.py  scenario_prompts.py  template_loader.py
ast_skills/persona_data_gen/templates/: persona_generation_system.jinja  persona_generation_user.jinja  query_generation_system.jinja  query_generation_user.jinja  scenario_generation_system.jinja  scenario_generation_user.jinja
ast_skills/retriever/: __init__.py  bm25_index.py  chroma_embeddings.py  cluster_visualizer.py  datamodels.py  evaluate_retriever.py  maximal_marginal_relevance_question.py  search.py  train_sentence_transformer.py
ast_skills/rich/: dev.ipynb
ast_skills/train/: build_dataset.py  datamodels.py  generate_training_data.py  scenario_query_annotation_app.py  scenario_query_row_io.py  train.py  train_sentence_transformer.py  validate_training_data.py
configs/: fsdp_accelerate.yaml  train.config.yaml  train.yaml
scripts/: retriever_train_fsdp_2gpu.sh  run_validation_two_gpu.sh
tests/: test_parse_skill_md_frontmatter.py
