[project]
name = "ast-skills"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fire>=0.7.0",
    "pyyaml>=6.0.2",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "openai>=2.31.0",
    "rich>=14.3.3",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.3",
    "vllm>=0.19.0",
    "transformers>=4.57.6",
    "sentence-transformers>=5.4.0",
    "chromadb>=1.1.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "scikit-learn>=1.7.2",
    "streamlit>=1.51.0",
    "rank-bm25>=0.2.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
