[project]
name = "ast-skills"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fire>=0.7.0",
    "pyyaml>=6.0.2",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "openai>=2.31.0",
    "rich>=14.3.3",
    "seaborn>=0.13.2",
    "tiktoken>=0.12.0",
    "tqdm<=4.66.5",
    "transformers>=4.57.6",
    "sentence-transformers>=5.4.0",
    "chromadb>=1.1.0",
    "pandas>=2.3.3",
    "pyarrow>=23.0.0",
    "plotly>=6.3.1",
    "rank-bm25>=0.2.2",
    "wandb>=0.22.0",
    "umap-learn>=0.5.12",
    "datasets>=4.8.4",
    "huggingface-hub>=0.36.0",
    "accelerate>=1.13.0",
    "vllm>=0.19.1",
]

[tool.uv]
environments = [
  "sys_platform == 'linux' and platform_machine == 'x86_64' and python_version == '3.13'"
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "nvitop>=1.6.2",
    "pytest>=9.0.3",
]
